--- a/index.html
+++ b/index.html
@@ -86,36 +86,23 @@
         <button type="button" onclick="selectHypothenuse()" class="triangle__hypothenuse">Hipothenuse</button>
         <button type="button" onclick="selectOpposite()" class="triangle__opposite">Opposite side</button>
         <button type="button" onclick="selectAdjacent()" class="triangle__adjacent">Adjacent side</button>
-        <div class="hyp not-shown" id="hyp">
-            <label for="hyp-angle-degrees">Angle degrees:</label>
-            <input type="number" name="hyp-angle-degrees" id="hyp-angle-degrees" placeholder="Ex: 37,2" step="0.0001" min="0.0001" max="359.9999"/>
-        </div>
-        <div class="opp not-shown" id="opp">
-            <label for="opp-angle-degrees">Angle degrees:</label>
-            <input type="number" name="opp-angle-degrees" id="opp-angle-degrees" placeholder="Ex: 35,2" step="0.0001" min="0.0001" max="359.9999"/>
-        </div>
-        <div class="adj not-shown" id="adj">
-            <label for="adj-angle-degrees">Angle degrees:</label>
-            <input type="number" name="adj-angle-degrees" id="adj-angle-degrees" placeholder="Ex: 33,2" step="0.0001" min="0.0001" max="359.9999"/>
+        <div class="hyp-opp-adj not-shown" id="hyp-opp-adj">
+            <span>Put the value of the angle that you already have</span>
+            <label for="hyp-opp-adj-angle-degrees">Principal angle degrees:</label>
+            <input type="number" name="hyp-opp-adj-angle-degrees" id="hyp-opp-adj-angle-degrees" placeholder="Ex: 37,2" step="0.0001" min="0.0001" max="359.9999" required/>
         </div>
         <button type="button" onclick="selectKnownSide()" id="continue-known-side" class="not-shown">Continue</button>
+
+
         <div class="known-side not-shown" id="known-side">
-            <h3>Side that you know:</h3>
+            <h3>Select the side that you know:</h3>
             <span>(depending on the angle you have)</span>
             <button type="button" onclick="selectSecondHyp()">Hypothenuse</button>
             <button type="button" onclick="selectSecondOpp()">Opposite side</button>
             <button type="button" onclick="selectSecondAdj()">Adjacent side</button>
-            <div class="known-side-hyp not-shown" id="known-side-hyp">
-                <label for="hyp-side-value">Hypothenuse value:</label>
-                <input type="number" name="hyp-side-value" id="hyp-side-value" placeholder="Ex: 33,2" step="0.0001" min="0.0001" max="1000000"/>
-            </div>
-            <div class="known-side-opp not-shown" id="known-side-opp">
-                <label for="opp-side-value">Opposite value:</label>
-                <input type="number" name="opp-side-value" id="opp-side-value" placeholder="Ex: 33,2" step="0.0001" min="0.0001" max="1000000"/>
-            </div>
-            <div class="kwown-side-adj not-shown" id="known-side-adj">
-                <label for="adj-side-value">Adjacent value:</label>
-                <input type="number" name="adj-side-value" id="adj-side-value" placeholder="Ex: 33,2" step="0.0001" min="0.0001" max="1000000"/>
+            <div class="known-side-value-div not-shown" id="known-side-value-div">
+                <label for="hyp-opp-adj-side-value" class="known-side-value-div__label" id="known-side-value-div__label"></label>
+                <input type="number" name="hyp-opp-adj-side-value" id="hyp-opp-adj-side-value" placeholder="Ex: 33,2" step="0.0001" min="0.0001" max="1000000" required/>
             </div>
             <span>Unit:</span>
             <select name="hypOppAdj-unit-selected" id="hypOppAdj-unit-selected">
@@ -126,7 +113,7 @@
                 <option value="km">km</option>
                 <option value="miles">miles</option>
             </select>
-            <button type="button" onclick="solveHypOppAdj()"></button>
+            <button type="button" onclick="calcHypOppAdj()" class="not-shown" id="solver-button"></button>
         </div>
     </section>
 
