--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
         <form>
             <span>Unit:</span>
             <select name="square-unit-selected" id="square-unit-selected">
+                <option value="unit">unit</option>
                 <option value="nm">nm</option>
                 <option value="mm">mm</option>
                 <option value="cm">cm</option>
@@ -64,6 +65,7 @@
         <form>
             <span>Unit</span>
             <select name="rectangle-unit-selected" id="rectangle-unit-selected" required>
+                <option value="unit">unit</option>
                 <option value="nm">nm</option>
                 <option value="mm">mm</option>
                 <option value="cm">cm</option>
@@ -89,7 +91,7 @@
         <div class="hyp-opp-adj not-shown" id="hyp-opp-adj">
             <span>Put the value of the angle that you already have</span>
             <label for="hyp-opp-adj-angle-degrees">Principal angle degrees:</label>
-            <input type="number" name="hyp-opp-adj-angle-degrees" id="hyp-opp-adj-angle-degrees" placeholder="Ex: 37,2" step="0.0001" min="0.0001" max="359.9999" required/>
+            <input type="number" name="hyp-opp-adj-angle-degrees" id="hyp-opp-adj-angle-degrees" placeholder="Ex: 37,2" step="0.0001" min="0.0001" max="89.9999" required/>
         </div>
         <button type="button" onclick="selectKnownSide()" id="continue-known-side" class="not-shown">Continue</button>
 
@@ -97,15 +99,16 @@
         <div class="known-side not-shown" id="known-side">
             <h3>Select the side that you know:</h3>
             <span>(depending on the angle you have)</span>
-            <button type="button" onclick="selectSecondHyp()">Hypothenuse</button>
-            <button type="button" onclick="selectSecondOpp()">Opposite side</button>
-            <button type="button" onclick="selectSecondAdj()">Adjacent side</button>
+            <button type="button" onclick="selectSecondHyp()" class="show-figure-inline-block" id="secondary-hyp">Hypothenuse</button>
+            <button type="button" onclick="selectSecondOpp()" class="show-figure-inline-block" id="secondary-opp">Opposite side</button>
+            <button type="button" onclick="selectSecondAdj()" class="show-figure-inline-block" id="secondary-adj">Adjacent side</button>
             <div class="known-side-value-div not-shown" id="known-side-value-div">
                 <label for="hyp-opp-adj-side-value" class="known-side-value-div__label" id="known-side-value-div__label"></label>
                 <input type="number" name="hyp-opp-adj-side-value" id="hyp-opp-adj-side-value" placeholder="Ex: 33,2" step="0.0001" min="0.0001" max="1000000" required/>
             </div>
             <span>Unit:</span>
             <select name="hypOppAdj-unit-selected" id="hypOppAdj-unit-selected">
+                <option value="unit">unit</option>
                 <option value="nm">nm</option>
                 <option value="mm">mm</option>
                 <option value="cm">cm</option>
@@ -117,16 +120,57 @@
         </div>
     </section>
 
+    <section class="circle not-shown" id="circle">
+        <h2>Put your values here</h2>
+        <form>
+            <span>Unit</span>
+            <select name="circle-unit-selected" id="circle-unit-selected" required>
+                <option value="unit">unit</option>
+                <option value="nm">nm</option>
+                <option value="mm">mm</option>
+                <option value="cm">cm</option>
+                <option value="m">m</option>
+                <option value="km">km</option>
+                <option value="miles">miles</option>
+            </select>
+            <label for="circle-decimals">Max decimals at result:</label>
+            <input type="number" name="circle-decimals" id="circle-decimals" placeholder="default: 0, max: 10 " max="10" required>
+            <label for="circle-radio">Radio:</label>
+            <input type="number" name="circle-radio" id="circle-radio" min="0" step="0.0001" max="1000000" required>
+            <button type="button" onclick="calculateCircle()">Calculate</button>
+        </form>
+    </section>
+
     <section>
         <h2>Results</h2>
-        <h3>The diameter is:</h3>
-        <span id="diameter-text"></span>
-        <h3>The perimeter is:</h3>
-        <span id="perimeter-text"></span>
-        <h3>The area is:</h3>
-        <span id="area-text"></span>
-        <h3>The volume is:</h3>
-        <span id="volumen-text"></span>
+        <div class="not-shown" id="diameter-div">
+            <h3>The diameter is:</h3>
+            <span id="diameter-text"></span>
+        </div>
+        <div class="not-shown" id="perimeter-div">
+            <h3>The perimeter is:</h3>
+            <span id="perimeter-text"></span>
+        </div>
+        <div class="not-shown" id="area-div">
+            <h3>The area is:</h3>
+            <span id="area-text"></span>
+        </div>
+        <div class="not-shown" id="volume-div">
+            <h3>The volume is:</h3>
+            <span id="volume-text"></span>
+        </div>
+        <div class="not-shown" id="hyp-div">
+            <h3>The hypothenuse is:</h3>
+            <span id="hyp-text"></span>
+        </div>
+        <div class="not-shown" id="opp-div">
+            <h3>The opposite side is:</h3>
+            <span id="opp-text"></span>
+        </div>
+        <div class="not-shown" id="adj-div">
+            <h3>The adjacent side is:</h3>
+            <span id="adj-text"></span>
+        </div>
     </section>
     
     <script src="./matlim.js"></script>
