First styles were created for the welcome section

--- a/index.html
+++ b/index.html
@@ -8,12 +8,22 @@
     <link rel="stylesheet" href="./styles/main.css">
 </head>
 <body>
-    <main>
+    <main class="main">
         <section class="welcome-section">
             <div class="squarrell">
-                <img src="https://i.imgur.com/F2vOHrf.png" title="Squarrell Math Solver Logo" class="squarrell__logo"/>
-                <h1 class="squarrell__title">Squarrell</h1>
-                <p class="squarrell__description">Math solver for geometry, statistics and more</p>
+                <div class="squarrell-left">
+                    <div class="squarrell-left-logo">
+                        <img src="https://i.imgur.com/F2vOHrf.png" alt="Squarrell Math Solver Logo" class="squarrell__logo"/>
+                        <h1 class="squarrell__title">Squarrell</h1>
+                    </div>
+                    <p class="squarrell__description">Math solver for geometry, statistics and more</p>
+                </div>
+                <button type="button" class="button">Show me more</button>
+                <div class="squarrell-right">
+                    <div class="squarrell-right__img squarrell-right__img1"></div>
+                    <div class="squarrell-right__img squarrell-right__img2"alt="Geometry figures"></div>
+                    <div class="squarrell-right__img squarrell-right__img3"alt="Statistics"></div>
+                </div>
             </div>
         </section>
         <section class="second-section">
