The mobile stylesheet of the main page was created

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                     </div>
                     <p class="squarrell__description">Math solver for geometry, statistics and more</p>
                 </div>
-                <button type="button" class="button">Show me more</button>
+                <a type="button" class="button">Show me more</a>
                 <div class="squarrell-right">
                     <div class="squarrell-right__img squarrell-right__img1"></div>
                     <div class="squarrell-right__img squarrell-right__img2"alt="Geometry figures"></div>
@@ -29,33 +29,33 @@
         <section class="second-section">
             <h2 class="second-section__title">What are you looking for?</h2>
             <p class="second-section__paragraph">Mean, median, mode, trigonometry and geometry problems, just a step away from you.</p>
-            <p class="second-section__paragraph">Constantly, this page is updated to introduce new features related to the mathematic areas.</p>
-            <span class="second-section__creator">created by: <a href="#creator">sergiosinlimites</a></span>
+            <p class="second-section__paragraph">Constantly, this page is updated to introduce new features related to mathematic areas.</p>
+            <span class="second-section__creator">created by: <a class="second-section__creator-span" href="#creator">@sergiosinlimites</a></span>
         </section>
         <section class="solutions-section">
-            <a href="./geometry.html">
+            <a href="./geometry.html" class="solutions-section__a">
                 <div class="solutions-section__div">
                     <h3 class="solutions-section__title">Geometry</h3>
                     <p class="solutions-section__paragraph">Calculator for geometry figures and trigonometry problems.</p>
-                    <img src="" alt="" class="">
+                    <img src="https://imgur.com/3ABP9pM.png" alt="Geometry and trigonometry calculator image" class="solutions-section__img solutions-section__img1">
                 </div>
-            </a><a href="">
+            </a><a href="" class="solutions-section__a">
                 <div class="solutions-section__div">
                     <h3 class="solutions-section__title">Statistics</h3>
                     <p class="solutions-section__paragraph">Mean, median and modes calculated from your values.</p>
-                    <img src="" alt="" class="">
+                    <img src="https://imgur.com/jiFXSCP.png" alt="Statistics: mean, median and mode image" class="solutions-section__img">
                 </div>
-            </a><a href="">
+            </a><a href="" class="solutions-section__a">
                 <div class="solutions-section__div">
                     <h3 class="solutions-section__title">Salaries</h3>
                     <p class="solutions-section__paragraph">Mean, median and top percent calculated from your values.</p>
-                    <img src="" alt="" class="">
+                    <img src="https://imgur.com/BHmh1rQ.png" alt="Salaries mean, median and top percent image" class="solutions-section__img">
                 </div>
             </a>
         </section>
         <section class="disclaimer-section">
             <h2 class="disclaimer-section__title">Disclaimer</h2>
-            <p class="disclaimer-section__paragraph">This app is made for helping people learning and give a fast solution to the people that don't know how to do them. If you are an student please keep it as a tool and not as a magic hand.</p>
+            <p class="disclaimer-section__paragraph">This app is made for helping people in their learning proccess and for giving a fast solution to the ones that don't know how to solve these problems. If you are an student please use it as a tool and not as a magic hand.</p>
         </section>
     </main>
     <footer class="creator" id="creator">
