Folders for different solvers were created, bugs with width fixed, still in progress

--- a/geometry/index.html
+++ b/geometry/index.html
@@ -11,6 +11,7 @@
     <header>
         <h1>Matlim</h1>
         <p>Geometric problems solver</p>
+        <p>I know it doesn't have styles yet. They are still in construction. The logic is done.</p>
     </header>
     <section>
         <h2>Choose the figure you are calculating</h2>
