--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Squarrell | Math Solver</title>
     <link rel="stylesheet" href="./styles/main.css">
+    <link rel="stylesheet" href="./styles/tablet.css" media="screen and (min-width: 768px)">
 </head>
 <body>
     <main class="main">
@@ -16,7 +17,7 @@
                         <img src="https://i.imgur.com/F2vOHrf.png" alt="Squarrell Math Solver Logo" class="squarrell__logo"/>
                         <h1 class="squarrell__title">Squarrell</h1>
                     </div>
-                    <p class="squarrell__description">Math solver for geometry, statistics and more</p>
+                    <p class="squarrell__description">Math solver for geometry, statistics and more (STILL IN PROGRESS)</p>
                 </div>
                 <a type="button" class="button">Show me more</a>
                 <div class="squarrell-right">
@@ -33,7 +34,7 @@
             <span class="second-section__creator">created by: <a class="second-section__creator-span" href="#creator">@sergiosinlimites</a></span>
         </section>
         <section class="solutions-section">
-            <a href="./geometry.html" class="solutions-section__a">
+            <a href="./geometry/" class="solutions-section__a">
                 <div class="solutions-section__div">
                     <h3 class="solutions-section__title">Geometry</h3>
                     <p class="solutions-section__paragraph">Calculator for geometry figures and trigonometry problems.</p>
