Laptop CSS was created and script file route was modified

--- a/geometry/index.html
+++ b/geometry/index.html
@@ -236,6 +236,6 @@
         </div>
     </section>
     
-    <script src="./js/geometry.js"></script>
+    <script src="../js/geometry.js"></script>
 </body>
 </html>
