--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Squarrell | Math Solver</title>
     <link rel="stylesheet" href="./styles/main.css">
     <link rel="stylesheet" href="./styles/tablet.css" media="screen and (min-width: 768px)">
+    <link rel="stylesheet" href="./styles/laptop.css" media="screen and (min-width: 1000px)">
 </head>
 <body>
     <main class="main">
