--- a/geometry/index.html
+++ b/geometry/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Figuras Geométricas | Taller #1</title>
-    <link rel="stylesheet" href="./styles/geometry.css">
+    <link rel="stylesheet" href="../styles/geometry.css">
 </head>
 <body>
     <header>
